timeline/base-resources/deployment.1.yml
apiVersion: v1
kind: Deployment
metadata:
  name: timeline
spec:
  template:
    spec:
      containers:
        - image: timeline
          name: timeline
          securityContext:
            privileged: false
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
        - readinessProbe:
            httpGet:
              path: /api/health/readiness
              port: 8080
              scheme: HTTP
          livenessProbe:
            httpGet:
              path: /api/health/liveness
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 60
            periodSeconds: 30
