timeline/base-resources/timeline-tp.svc.yml
apiVersion: v1
kind: Service
metadata:
  name: timeline-tp
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    telepresence: timeline-tp
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
