timeline/base-resources/timeline-tp.route.yml
apiVersion: v1
kind: Route
metadata:
  name: timeline-tp
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: timeline-tp
